# bonkjs

./: CLAUDE.md  README.md  editor.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
behaviors/: InputDebugDisplay.ts  PlayerController.ts  index.ts
desktop/: .gitignore  electron-builder.yml  index.html  main.cjs  main.mjs  package-lock.json  package.json  preload.cjs  vite.config.ts
desktop/src/: demo.ts
docs/: ANIMATED-SPRITES.md  ARCHITECTURE.md  AUDIO-SYSTEM.md  CAMERA.md  DESKTOP.md  EDITOR-MVP.md  EDITOR-STYLE-GUIDE.md  EVENTS.md  GAMEPAD-CONTROLS.md  INPUT.md  PARTICLES.md  PHYSICS.md  README.md  RNG.md  SCENES-AND-PREFABS.md  SOUND.md  SPLASH.md  TIME.md  TOUCH-CONTROLS.md  UI-RESEARCH.md  VISION.md
scenes/: Level1.mdx
src/: BonkSplash.ts  Camera.ts  Game.ts  GamepadControls.ts  Input.ts  Particles.ts  Rng.ts  Sound.ts  TouchControls.ts  index.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pty.rs
src/desktop/: index.ts  remote-bundle.ts
src/editor/: App.tsx  index.css  index.tsx
src/editor/hooks/: useDragAndDrop.ts  useFileTree.ts  useKeyboardShortcuts.ts  useSelectedGameObject.ts
src/editor/lib/: coordinates.ts  filesystem.ts
src/editor/store/: editorStore.ts
src/engine/: Behavior.ts  Input.ts  Scene.ts  SceneLoader.ts  index.ts
src/engine/components/: AnimatedSpriteComponent.ts  AudioSourceComponent.ts  SpriteComponent.ts
src/engine/math/: vec2.ts
src/render/: Camera.ts  PixiRenderer.ts  Renderer.ts
(+37 files in other folders)
