[package]
name = "bonk-engine-editor"
version = "0.1.0"
description = "Bonk Engine Editor - 2D game editor with AI collaboration"
authors = ["Connor Leisz"]
edition = "2021"

[lib]
name = "bonk_engine_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
lazy_static = "1.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
